--- a/index.htm
+++ b/index.htm
@@ -2,5 +2,6 @@
 <html>
 <body>
   <h1>Hello world! I am here</h1>
+  <p>My dad made me a website when I was very young, and there was a .gif of a dancing alien.</p>
 </body>
 </html>
