--- a/index.htm
+++ b/index.htm
@@ -3,6 +3,6 @@
 <body>
   <h1>Hello world! I am here</h1>
   <p>My dad made me a website when I was very young, and there was a .gif of a dancing alien.</p>
-  <a href="http://leatheretteland.blogspot.com/2010_09_01_archive.html">This might have been it...</a>
+  <img src="https://media.tenor.com/images/65505e8e055759184ee9813075c1e00b/tenor.gif">
 </body>
 </html>
