--- a/index.htm
+++ b/index.htm
@@ -1,8 +1,32 @@
-<!DOCTYPEHTML>
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<title>Zach's website</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
 <body>
-  <h1>Hello world! I am here</h1>
-  <p>My dad made me a website when I was very young, and there was a .gif of a dancing alien.</p>
-  <img src="https://media.tenor.com/images/65505e8e055759184ee9813075c1e00b/tenor.gif">
+  <h1>Hello world! (Zach's website)</h1>
+  <h3>*UNDER CONSTRUCTION*</h3>
+  <p>
+    Zach Whitworth (Hebrew; זְכַרְיָה אֵיתָן) is an American writer and cultural scholar.
+  </p>
+  <img src="images/Whitworth_WhiteboardDrawings.jpg" width="75%" alt="An assortment of children's drawings. Among them are a tiny turtle, a smiling octopus with large eyebrows, a big-billed bird with three giant feathers, another turtle with wheel-like feet in a pet tank, a lemon with a questionable expression, and a small stick figure with massive ears.">
+  <h3>Ongoing engagements</h3>
+  <ul>
+    <li><i>Intro to Coding for Designers</i> w/ Megumi Tanaka, <a href="https://index-space.org/">Index</a> (NYC)</li>
+    <li><i>Punctual Momentum | On the dot, down the line</i> w/ Adam Feldmeth, <a href="http://southland.institute/index.html">The Southland Institute</a> (LA)</li>
+    <li>Community Reading Group, <a href="https://www.lacarchive.com/">Los Angeles Contemporary Archive</a> (LA)</li>
+  </ul>
+  <h3>Some recent reading</h3>
+  <ul>
+  <li>Walter Benjamin, <i>The Storyteller: Reflections on the Works of Nikolai Leskov</i> (1936)</li>
+  <li><i>Prescriptions for Comedy Writers: A Conversation between Wilhelm Speyer and Walter Benjamin</i> (1930)</li>
+  <li>Walter Benjamin, <i>Conversation on Love</i> (c. 1911)</li>
+  <li>Walter Benjamin, <i>The Free School Community</i> (1911)</li>
+  <li>Murray Bookchin, <i>The Unity of Ideals and Practice</i> (1997)</li></ul>
+ <h3>Current long-term reading</h3>
+   <ul>
+     <li>Fred Moten, <i>Black and Blur</i> (2017)</li>
+     <li>Michael Löwy, <i>Redemption and Utopia: Jewish Libertarian Thought in Central Europe</i> (1988)</li>
 </body>
 </html>
