Addition of Favorites page

--- a/index.htm
+++ b/index.htm
@@ -7,6 +7,10 @@
 <body>
   <h1>Hello world! (Zach's website)</h1>
   <h3>*UNDER CONSTRUCTION*</h3>
+  <ul>
+    <li><a href="index.htm">Home</a></li>
+    <li><a href="favorites/index.htm">Favorites</a></li>
+  </ul>
   <p>
     Zach Whitworth (Hebrew; זְכַרְיָה אֵיתָן) is an American writer and cultural scholar.
   </p>
