Favorites page update

--- a/index.htm
+++ b/index.htm
@@ -8,7 +8,7 @@
   <h1>Hello world! (Zach's website)</h1>
   <h3>*UNDER CONSTRUCTION*</h3>
   <ul>
-    <li><a href="index.htm">Home</a></li>
+    <li>Home</li>
     <li><a href="favorites/index.htm">Favorites</a></li>
   </ul>
   <p>
