--- a/favorites/index.htm
+++ b/favorites/index.htm
@@ -7,8 +7,8 @@
 <body>
   <h1>Zach's favorites</h1>
   <ul>
-    <li><a href="index.htm">Home</a></li>
-    <li><a href="favorites/index.htm">Favorites</a></li>
+    <li><a href="zachwhitworth.github.io/index.htm">Home</a></li>
+    <li>Favorites</li>
   </ul>
   <h3>A short selection of good projects and organizations</h3>
   <ul>
