Another page fix...

--- a/index.htm
+++ b/index.htm
@@ -9,7 +9,7 @@
   <h3>*UNDER CONSTRUCTION*</h3>
   <ul>
     <li>Home</li>
-    <li><a href="favorites/index.htm">Favorites</a></li>
+    <li><a href="favorites.htm">Favorites</a></li>
   </ul>
   <p>
     Zach Whitworth (Hebrew; זְכַרְיָה אֵיתָן) is an American writer and cultural scholar.
