--- a/favorites.htm
+++ b/favorites.htm
@@ -7,7 +7,7 @@
 <body>
   <h1>Zach's favorites</h1>
   <ul>
-    <li><a href="zachwhitworth.github.io/index.htm">Home</a></li>
+    <li><a href="index.htm">Home</a></li>
     <li>Favorites</li>
   </ul>
   <h3>A short selection of good projects and organizations</h3>
