--- a/index.htm
+++ b/index.htm
@@ -1,21 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- This website is just a testing ground for now -->
 <head>
 <title>Zach's website</title>
 <link rel="icon" type="image/png" href="images/favicon.png">
+<link rel="stylesheet" type="text/css" href="style.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+<!-- Just think of all this as a set of placeholders for something more substantial later on -->
 <body>
-  <h1>Hello world! (Zach's website)</h1>
+  <header>
+  <h1>Zach's wacky website</h1>
   <h3>*UNDER CONSTRUCTION*</h3>
+</header>
   <ul>
     <li>Home</li>
     <li><a href="favorites.htm">Favorites</a></li>
   </ul>
   <p>
+    <header>
     Zach Whitworth (Hebrew; זְכַרְיָה אֵיתָן) is an American writer and cultural scholar.
+  </header>
   </p>
-  <img src="images/Whitworth_WhiteboardDrawings.jpg" width="75%" alt="An assortment of children's drawings. Among them are a tiny turtle, a smiling octopus with large eyebrows, a big-billed bird with three giant feathers, another turtle with wheel-like feet in a pet tank, a lemon with a questionable expression, and a small stick figure with massive ears.">
+  <img src="images/Whitworth_WhiteboardDrawings.jpg" width="100%" alt="An assortment of children's drawings. Among them are a tiny turtle, a smiling octopus with large eyebrows, a big-billed bird with three giant feathers, another turtle with wheel-like feet in a pet tank, a lemon with a questionable expression, and a small stick figure with massive ears.">
+  <section>
   <h3>Ongoing engagements</h3>
   <ul>
     <li><i>Intro to Coding for Designers</i> w/ Megumi Tanaka, <a href="https://index-space.org/">Index</a> (NYC)</li>
@@ -33,5 +41,7 @@
    <ul>
      <li>Fred Moten, <i>Black and Blur</i> (2017)</li>
      <li>Michael Löwy, <i>Redemption and Utopia: Jewish Libertarian Thought in Central Europe</i> (1988)</li>
+   </ul>
+ </section>
 </body>
 </html>
