--- a/favorites.htm
+++ b/favorites.htm
@@ -3,6 +3,7 @@
 <head>
 <title>Zach's favorites</title>
 <link rel="icon" type="image/png" href="images/favicon.png">
+<link rel="stylesheet" type="text/css" href="style.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
