Added page, applied CSS grid

--- a/index.htm
+++ b/index.htm
@@ -16,6 +16,7 @@
   <ul>
     <li>Home</li>
     <li><a href="favorites.htm">Favorites</a></li>
+    <li><a href="destruction.htm">Destruction</a></li>
   </ul>
   <p>
     <header>
