--- a/destruction.htm
+++ b/destruction.htm
@@ -7,11 +7,11 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<section>
 <body>
-  <h3>Walter Benjamin – <i>The Destructive Character</i> (1931)</h3>
-  <h3>LETTRIST INTERNATIONAL — <i>Proposals for Rationally Improving the City of Paris</i> (1955)</h3>
-    <p>
+  <section class="content">
+    <section>
+      <h3>Walter Benjamin,<i>The Destructive Character</i>(1931)</h3>
+      <p>
     It could happen to someone looking back over his life that he realized that almost all the deeper obligations he had endured in its course originated in people who everyone agreed had the traits of a “destructive character.” He would stumble on this fact one day, perhaps by chance, and the heavier the shock dealt to him, the better his chances of representing the destructive character.
     <br>
     <br>
@@ -50,40 +50,59 @@
     <br>
     The destructive character lives from the feeling not that life is worth living, but that suicide is not worth the trouble.
   </p>
+  </section>
+  <section>
+  <h3>LETTRIST INTERNATIONAL,<i>Proposals for Rationally Improving the City of Paris</i>(1955)</h3>
   <p>
     The Lettrists present at the September 26 meeting jointly proposed the following solutions to the various urbanistic problems that came up in discussion. They stress that no constructive action was considered, since they all agreed that the most urgent task is to clear the ground.
-
-The subways should be opened at night after the trains have stopped running. The corridors and platforms should be poorly lit, with dim lights flickering on and off intermittently.
-
-The rooftops of Paris should be opened to pedestrian traffic by modifying fire-escape ladders and by constructing bridges where necessary. Public gardens should remain open at night, unlit. (In a few cases, a steady dim illumination might be justified on psychogeographical grounds.)
-
-Street lamps should all be equipped with switches so that people can adjust the lighting as they wish.
-
-With regard to churches, four different solutions were proposed, all of which were considered defensible until appropriate experimentation can be undertaken, which should quickly demonstrate which is the best.
-
-G.-E. Debord argued for the total destruction of religious buildings of all denominations, leaving no trace and using the sites for other purposes.
-
-Gil J Wolman proposed that churches be left standing but stripped of all religious content. They should be treated as ordinary buildings, and children should be allowed to play in them.
-
-Michèle Bernstein suggested that churches be partially demolished, so that the remaining ruins give no hint of their original function (the Tour Jacques on Boulevard de Sébastopol being an unintentional example). The ideal solution would be to raze churches to the ground and then build ruins in their place. The first method was proposed purely for reasons of economy.
-
-Lastly, Jacques Fillon favored the idea of transforming churches into houses of horror (maintaining their current ambience while accentuating their terrifying effects).
-
-Everyone agreed that aesthetic objections should be rejected, that admirers of the portals of Chartres should be silenced. Beauty, when it is not a promise of happiness, must be destroyed. And what could be more repugnant representations of unhappiness than such monuments to everything in the world that remains to be overcome, to the numerous aspects of life that remain inhuman?
-
-Train stations should be left as they are. Their rather poignant ugliness contributes to the feeling of transience that makes these buildings mildly attractive. Gil J Wolman proposed removing or scrambling all information regarding departures (destinations, timetables, etc.) in order to facilitate dérives. After a lively debate, those opposing this motion retracted their objections and it was wholeheartedly approved. It was also agreed that background noise in the stations should be intensified by broadcasting recordings from many other stations, as well as from certain harbors.
-
-Cemeteries should be eliminated. All corpses and related memorials should be totally destroyed, leaving no ashes and no remains. (It should be noted that these hideous remnants of an alienated past constitute a subliminal reactionary propaganda. Is it possible to see a cemetery and not be reminded of Mauriac, Gide or Edgar Faure?)
-
-Museums should be abolished and their masterpieces distributed to bars (Philippe de Champaigne’s works in the Arab cafés of rue Xavier-Privas; David’s Sacre in the Tonneau on Rue Montagne-Geneviève).
-
-Everyone should have free access to the prisons. They should be available as tourist destinations, with no distinction between visitors and inmates. (To spice things up, monthly lotteries might be held to see which visitor would win a real prison sentence. This would cater to those imbeciles who feel an imperative need to undergo uninteresting risks: spelunkers, for example, and everyone else whose craving for play is satisfied by such paltry pseudogames.)
-
-Buildings whose ugliness cannot be put to any good use (such as the Petit or Grand Palais) should make way for other constructions. Statues that no longer have any meaning, and whose possible aesthetic refurbishings would inevitably be condemned by history, should be removed. Their usefulness could be extended during their final years by changing the inscriptions on their pedestals, either in a political sense (The Tiger Named Clemenceau on the Champs Élysées) or for purposes of disorientation (Dialectical Homage to Fever and Quinine at the intersection of Boulevard Michel and rue Comte, or The Great Depths in the cathedral plaza on the Île de la Cité).
-
-In order to put an end to the cretinizing influence of current street names, names of city councilors, heroes of the Resistance, all the Émiles and Édouards (55 Paris streets), all the Bugeauds and Gallifets,(2) and in general all obscene names (Rue de l’Évangile) should be obliterated.
-
-In this regard, the appeal launched in Potlatch #9 for ignoring the word “saint” in place names is more pertinent than ever.
-</p>
+    <br>
+    <br>
+    The subways should be opened at night after the trains have stopped running. The corridors and platforms should be poorly lit, with dim lights flickering on and off intermittently.
+    <br>
+    <br>
+    The rooftops of Paris should be opened to pedestrian traffic by modifying fire-escape ladders and by constructing bridges where necessary. Public gardens should remain open at night, unlit. (In a few cases, a steady dim illumination might be justified on psychogeographical grounds.)
+    <br>
+    <br>
+    Street lamps should all be equipped with switches so that people can adjust the lighting as they wish.
+    <br>
+    <br>
+    With regard to churches, four different solutions were proposed, all of which were considered defensible until appropriate experimentation can be undertaken, which should quickly demonstrate which is the best.
+    <br>
+    <br>
+    G.-E. Debord argued for the total destruction of religious buildings of all denominations, leaving no trace and using the sites for other purposes.
+    <br>
+    <br>
+    Gil J Wolman proposed that churches be left standing but stripped of all religious content. They should be treated as ordinary buildings, and children should be allowed to play in them.
+    <br>
+    Michèle Bernstein suggested that churches be partially demolished, so that the remaining ruins give no hint of their original function (the Tour Jacques on Boulevard de Sébastopol being an unintentional example). The ideal solution would be to raze churches to the ground and then build ruins in their place. The first method was proposed purely for reasons of economy.
+    <br>
+    <br>
+    Lastly, Jacques Fillon favored the idea of transforming churches into houses of horror (maintaining their current ambience while accentuating their terrifying effects).
+    <br>
+    <br>
+    Everyone agreed that aesthetic objections should be rejected, that admirers of the portals of Chartres should be silenced. Beauty, when it is not a promise of happiness, must be destroyed. And what could be more repugnant representations of unhappiness than such monuments to everything in the world that remains to be overcome, to the numerous aspects of life that remain inhuman?
+    <br>
+    <br>
+    Train stations should be left as they are. Their rather poignant ugliness contributes to the feeling of transience that makes these buildings mildly attractive. Gil J Wolman proposed removing or scrambling all information regarding departures (destinations, timetables, etc.) in order to facilitate dérives. After a lively debate, those opposing this motion retracted their objections and it was wholeheartedly approved. It was also agreed that background noise in the stations should be intensified by broadcasting recordings from many other stations, as well as from certain harbors.
+    <br>
+    <br>
+    Cemeteries should be eliminated. All corpses and related memorials should be totally destroyed, leaving no ashes and no remains. (It should be noted that these hideous remnants of an alienated past constitute a subliminal reactionary propaganda. Is it possible to see a cemetery and not be reminded of Mauriac, Gide or Edgar Faure?)
+    <br>
+    <br>
+    Museums should be abolished and their masterpieces distributed to bars (Philippe de Champaigne’s works in the Arab cafés of rue Xavier-Privas; David’s Sacre in the Tonneau on Rue Montagne-Geneviève).
+    <br>
+    <br>
+    Everyone should have free access to the prisons. They should be available as tourist destinations, with no distinction between visitors and inmates. (To spice things up, monthly lotteries might be held to see which visitor would win a real prison sentence. This would cater to those imbeciles who feel an imperative need to undergo uninteresting risks: spelunkers, for example, and everyone else whose craving for play is satisfied by such paltry pseudogames.)
+    <br>
+    <br>
+    Buildings whose ugliness cannot be put to any good use (such as the Petit or Grand Palais) should make way for other constructions. Statues that no longer have any meaning, and whose possible aesthetic refurbishings would inevitably be condemned by history, should be removed. Their usefulness could be extended during their final years by changing the inscriptions on their pedestals, either in a political sense (The Tiger Named Clemenceau on the Champs Élysées) or for purposes of disorientation (Dialectical Homage to Fever and Quinine at the intersection of Boulevard Michel and rue Comte, or The Great Depths in the cathedral plaza on the Île de la Cité).
+    <br>
+    <br>
+    In order to put an end to the cretinizing influence of current street names, names of city councilors, heroes of the Resistance, all the Émiles and Édouards (55 Paris streets), all the Bugeauds and Gallifets,(2) and in general all obscene names (Rue de l’Évangile) should be obliterated.
+    <br>
+    <br>
+    In this regard, the appeal launched in<i>Potlatch #9</i>for ignoring the word “saint” in place names is more pertinent than ever.
+  </p>
+</section>
 </section>
 </body>
