--- a/index.htm
+++ b/index.htm
@@ -1,48 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- This website is just a testing ground for now -->
+<!-- This website is a test and not necessarily permanent -->
 <head>
-<title>Zach's website</title>
+<title>Zach Whitworth</title>
 <link rel="icon" type="image/png" href="images/favicon.png">
 <link rel="stylesheet" type="text/css" href="style.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<!-- Just think of all this as a set of placeholders for something more substantial later on -->
-<body>
-  <header>
-  <h1>Zach's wacky website</h1>
-  <h3>*UNDER CONSTRUCTION*</h3>
-</header>
-  <ul>
-    <li>Home</li>
-    <li><a href="favorites.htm">Favorites</a></li>
+<header>
+  <h1>Zach Whitworth</h1>
+  <ol>
+    <li><i>Info</i></li>
+    <li><a href=favorites.htm>Favorites</a></li>
     <li><a href="destruction.htm">Destruction</a></li>
-  </ul>
-  <p>
-    <header>
-    Zach Whitworth (Hebrew; זְכַרְיָה אֵיתָן) is an American writer and cultural scholar.
-  </header>
-  </p>
-  <img src="images/Whitworth_WhiteboardDrawings.jpg" width="100%" alt="An assortment of children's drawings. Among them are a tiny turtle, a smiling octopus with large eyebrows, a big-billed bird with three giant feathers, another turtle with wheel-like feet in a pet tank, a lemon with a questionable expression, and a small stick figure with massive ears.">
-  <section>
-  <h3>Ongoing engagements</h3>
-  <ul>
-    <li><i>Intro to Coding for Designers</i> w/ Megumi Tanaka, <a href="https://index-space.org/">Index</a> (NYC)</li>
-    <li><i>Punctual Momentum | On the dot, down the line</i> w/ Adam Feldmeth, <a href="http://southland.institute/index.html">The Southland Institute</a> (LA)</li>
-    <li>Community Reading Group, <a href="https://www.lacarchive.com/">Los Angeles Contemporary Archive</a> (LA)</li>
-  </ul>
-  <h3>Some recent reading</h3>
-  <ul>
-  <li>Walter Benjamin, <i>The Storyteller: Reflections on the Works of Nikolai Leskov</i> (1936)</li>
-  <li><i>Prescriptions for Comedy Writers: A Conversation between Wilhelm Speyer and Walter Benjamin</i> (1930)</li>
-  <li>Walter Benjamin, <i>Conversation on Love</i> (c. 1911)</li>
-  <li>Walter Benjamin, <i>The Free School Community</i> (1911)</li>
-  <li>Murray Bookchin, <i>The Unity of Ideals and Practice</i> (1997)</li></ul>
- <h3>Current long-term reading</h3>
-   <ul>
-     <li>Fred Moten, <i>Black and Blur</i> (2017)</li>
-     <li>Michael Löwy, <i>Redemption and Utopia: Jewish Libertarian Thought in Central Europe</i> (1988)</li>
-   </ul>
- </section>
-</body>
-</html>
+  </ol>
+</header>
+<body>
+  <section class="content">
+    <section>
+    <p>
+      Zach Whitworth (Hebrew: זְכַרְיָה אֵיתָן; Irish: Sacharías Etan) hails from the Umpqua Valley of the Pacific Northwest.
+    </p>
+    <p>
+      “A gentleman and scholar.”
+    </p>
+    <p>
+      “He brings people together.”
+    </p>
+    <p>
+      “A new friend who feels like an old friend.”
+    </p>
+    <p>
+      “He is not only talented and intelligent but devoted to alternative methods of publishing discourse and collective organizing in the field.”
+    </p>
+    <p>
+      “He is a thoughtful and innovative scholar who has much to say about society. His ideas are urgent, pressing, and inciteful.”
+    </p>
+  </section>
+    <section>
+      <p>
+        I've felt ambivalent about autobiographical statements for a while. I find myself oscillating between definitions and positions, never satisfied with one or the other. For instance, it's difficult for me to draw a line between my work as a writer and as an editor; as a designer and as a curator; as a scholar and as an art worker.
+      </p>
+      <p>
+        As an alternative, I started to keep quotes from others who refer to me in conversations. It's less of who I believe myself to be—in theory, it's closer to how I will be remembered when I'm no longer around.
+      </p>
+    </section>
