--- a/favorites.htm
+++ b/favorites.htm
@@ -6,13 +6,18 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+<header>
+  <h1>Favorites</h1>
+  <ol>
+    <li class="menu"><a href="index.htm">Info</a></li>
+    <li class="menu"><i>Favorites</i></li>
+    <li class="menu"><a href="destruction.htm">Destruction</a></li>
+  </ol>
+</header>
 <body>
-  <h1>Zach's favorites</h1>
-  <ul>
-    <li><a href="index.htm">Home</a></li>
-    <li>Favorites</li>
-  </ul>
-  <h3>A short selection of good projects and organizations</h3>
+  <section class="content">
+    <section>
+<p>A short selection of good projects and organizations, some of which I've worked or studied with.</p>
   <ul>
     <li><a href="http://communityreadinggroup.com/">Community Reading Group</a></li>
     <li><a href="http://southland.institute/">The Southland Institute (for critical, durational, and typographic post-studio practices)</a></li>
