--- a/index.htm
+++ b/index.htm
@@ -10,9 +10,9 @@
 <header>
   <h1>Zach Whitworth</h1>
   <ol>
-    <li><i>Info</i></li>
-    <li><a href=favorites.htm>Favorites</a></li>
-    <li><a href="destruction.htm">Destruction</a></li>
+    <li class="menu"><i>Info</i></li>
+    <li class="menu"><a href=favorites.htm>Favorites</a></li>
+    <li class="menu"><a href="destruction.htm">Destruction</a></li>
   </ol>
 </header>
 <body>
