--- a/index.htm
+++ b/index.htm
@@ -38,8 +38,8 @@
     </p>
   </section>
     <section>
-      <p><i>
-        I've felt ambivalent about autobiographical statements for a while. I find myself oscillating between definitions and positions, never satisfied with one or the other. For instance, it's difficult for me to draw a line between my work as a writer and as an editor; as a designer and as a curator; as a scholar and as an art worker.
+      <p>
+        <i>I've felt ambivalent about autobiographical statements for a while. I find myself oscillating between definitions and positions, never satisfied with one or the other. For instance, it's difficult for me to draw a line between my work as a writer and as an editor; as a designer and as a curator; as a scholar and as an art worker.
       </p>
       <p>
         As an alternative, I started to keep quotes from others who refer to me in conversations. It's less of who I believe myself to be—in theory, it's closer to how I will be remembered when I'm no longer around.</i>
