Talmudic style edits, change in page titles

--- a/columns.htm
+++ b/columns.htm
@@ -2,36 +2,14 @@
 <html lang="en">
 <!-- This website is a test and not necessarily permanent -->
 <head>
-<title>Layout test</title>
+<title>Destruction</title>
 <link rel="icon" type="image/png" href="images/favicon.png">
-<link rel="stylesheet" type="text/css" href="talmud.css">
+<link rel="stylesheet" type="text/css" href="style.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-  <div class="right">
-    <div class="center">
-    12:1 And the LORD spake unto Moses and Aaron in the land of Egypt saying, 12:2 This month shall be unto you the beginning of months: it shall be the first month of the year to you.
-
-12:3 Speak ye unto all the congregation of Israel, saying, In the tenth day of this month they shall take to them every man a lamb, according to the house of their fathers, a lamb for an house: 12:4 And if the household be too little for the lamb, let him and his neighbour next unto his house take it according to the number of the souls; every man according to his eating shall make your count for the lamb.
-
-12:5 Your lamb shall be without blemish, a male of the first year: ye shall take it out from the sheep, or from the goats: 12:6 And ye shall keep it up until the fourteenth day of the same month: and the whole assembly of the congregation of Israel shall kill it in the evening.
-
-12:7 And they shall take of the blood, and strike it on the two side posts and on the upper door post of the houses, wherein they shall eat it.
-
-12:8 And they shall eat the flesh in that night, roast with fire, and unleavened bread; and with bitter herbs they shall eat it.
-
-12:9 Eat not of it raw, nor sodden at all with water, but roast with fire; his head with his legs, and with the purtenance thereof.
-
-12:10 And ye shall let nothing of it remain until the morning; and that which remaineth of it until the morning ye shall burn with fire.
-
-12:11 And thus shall ye eat it; with your loins girded, your shoes on your feet, and your staff in your hand; and ye shall eat it in haste: it is the LORD's passover.
-
-12:12 For I will pass through the land of Egypt this night, and will smite all the firstborn in the land of Egypt, both man and beast; and against all the gods of Egypt I will execute judgment: I am the LORD.
-
-12:13 And the blood shall be to you for a token upon the houses where ye are: and when I see the blood, I will pass over you, and the plague shall not be upon you to destroy you, when I smite the land of Egypt.
-
-12:14 And this day shall be unto you for a memorial; and ye shall keep it a feast to the LORD throughout your generations; ye shall keep it a feast by an ordinance for ever.
-</div>
+  <section class="content">
+    <section>
       <h3>Walter Benjamin, <i>The Destructive Character</i> (1931)</h3>
       <p>
     It could happen to someone looking back over his life that he realized that almost all the deeper obligations he had endured in its course originated in people who everyone agreed had the traits of a “destructive character.” He would stumble on this fact one day, perhaps by chance, and the heavier the shock dealt to him, the better his chances of representing the destructive character.
@@ -72,8 +50,9 @@
     <p>
     The destructive character lives from the feeling not that life is worth living, but that suicide is not worth the trouble.
   </p>
-</div>
-  <div class="left">
+  <br>
+  </section>
+  <section>
   <h3>LETTRIST INTERNATIONAL, <i>Proposals for Rationally Improving the City of Paris</i> (1955)</h3>
   <p>
     The Lettrists present at the September 26 meeting jointly proposed the following solutions to the various urbanistic problems that came up in discussion. They stress that no constructive action was considered, since they all agreed that the most urgent task is to clear the ground.
@@ -126,5 +105,6 @@
     <p>
     In this regard, the appeal launched in<i>Potlatch #9</i>for ignoring the word “saint” in place names is more pertinent than ever.
   </p>
-</div>
+</section>
+</section>
 </body>
