--- a/destruction.htm
+++ b/destruction.htm
@@ -2,14 +2,43 @@
 <html lang="en">
 <!-- This website is a test and not necessarily permanent -->
 <head>
-<title>Destruction</title>
+<title>Layout test</title>
 <link rel="icon" type="image/png" href="images/favicon.png">
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="talmud.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+<header>
+  <h1>Zach Whitworth</h1>
+  <ol>
+    <li class="menu"><i>Info</i></li>
+    <li class="menu"><a href=favorites.htm>Favorites</a></li>
+    <li class="menu"><a href="destruction.htm">Destruction</a></li>
+  </ol>
+</header>
 <body>
-  <section class="content">
-    <section>
+  <div class="right">
+    <div class="center">
+      <h3>Excerpt from <em>Shemot</em>, 12:21–12:30</h3>
+      21 Then Moses called for all the elders of Israel, and said unto them: 'Draw out, and take you lambs according to your families, and kill the passover lamb.
+
+  22 And ye shall take a bunch of hyssop, and dip it in the blood that is in the basin, and strike the lintel and the two side-posts with the blood that is in the basin; and none of you shall go out of the door of his house until the morning.
+
+  23 For HaShem will pass through to smite the Egyptians; and when He seeth the blood upon the lintel, and on the two side-posts, HaShem will pass over the door, and will not suffer the destroyer to come in unto your houses to smite you.
+
+  24 And ye shall observe this thing for an ordinance to thee and to thy sons for ever.
+
+  25 And it shall come to pass, when ye be come to the land which HaShem will give you, according as He hath promised, that ye shall keep this service.
+
+  26 And it shall come to pass, when your children shall say unto you: What mean ye by this service?
+
+  27 that ye shall say: It is the sacrifice of HaShem'S passover, for that He passed over the houses of the children of Israel in Egypt, when He smote the Egyptians, and delivered our houses.' And the people bowed the head and worshipped.
+
+  28 And the children of Israel went and did so; as HaShem had commanded Moses and Aaron, so did they.
+
+  29 And it came to pass at midnight, that HaShem smote all the firstborn in the land of Egypt, from the first-born of Pharaoh that sat on his throne unto the first-born of the captive that was in the dungeon; and all the first-born of cattle.
+
+  30 And Pharaoh rose up in the night, he, and all his servants, and all the Egyptians; and there was a great cry in Egypt; for there was not a house where there was not one dead.
+</div>
       <h3>Walter Benjamin, <i>The Destructive Character</i> (1931)</h3>
       <p>
     It could happen to someone looking back over his life that he realized that almost all the deeper obligations he had endured in its course originated in people who everyone agreed had the traits of a “destructive character.” He would stumble on this fact one day, perhaps by chance, and the heavier the shock dealt to him, the better his chances of representing the destructive character.
@@ -50,9 +79,8 @@
     <p>
     The destructive character lives from the feeling not that life is worth living, but that suicide is not worth the trouble.
   </p>
-  <br>
-  </section>
-  <section>
+</div>
+  <div class="left">
   <h3>LETTRIST INTERNATIONAL, <i>Proposals for Rationally Improving the City of Paris</i> (1955)</h3>
   <p>
     The Lettrists present at the September 26 meeting jointly proposed the following solutions to the various urbanistic problems that came up in discussion. They stress that no constructive action was considered, since they all agreed that the most urgent task is to clear the ground.
@@ -105,6 +133,5 @@
     <p>
     In this regard, the appeal launched in<i>Potlatch #9</i>for ignoring the word “saint” in place names is more pertinent than ever.
   </p>
-</section>
-</section>
+</div>
 </body>
