--- a/destruction.htm
+++ b/destruction.htm
@@ -10,15 +10,15 @@
 <header>
   <h1>Zach Whitworth</h1>
   <ol>
-    <li class="menu"><i>Info</i></li>
+    <li class="menu"><a href=index.htm>Info</li>
     <li class="menu"><a href=favorites.htm>Favorites</a></li>
-    <li class="menu"><a href="destruction.htm">Destruction</a></li>
+    <li class="menu"><i>Destruction</i></li>
   </ol>
 </header>
 <body>
   <div class="right">
     <div class="center">
-      <h3>Excerpt from <em>Shemot</em>, 12:21–12:30</h3>
+      <h3 class="titlecenter">Excerpt from <em>Shemot</em>, 12:21–12:30</h3>
       21 Then Moses called for all the elders of Israel, and said unto them: 'Draw out, and take you lambs according to your families, and kill the passover lamb.
 
   22 And ye shall take a bunch of hyssop, and dip it in the blood that is in the basin, and strike the lintel and the two side-posts with the blood that is in the basin; and none of you shall go out of the door of his house until the morning.
@@ -39,7 +39,7 @@
 
   30 And Pharaoh rose up in the night, he, and all his servants, and all the Egyptians; and there was a great cry in Egypt; for there was not a house where there was not one dead.
 </div>
-      <h3>Walter Benjamin, <i>The Destructive Character</i> (1931)</h3>
+      <h3 class="titleright">Walter Benjamin, <i>The Destructive Character</i> (1931)</h3>
       <p>
     It could happen to someone looking back over his life that he realized that almost all the deeper obligations he had endured in its course originated in people who everyone agreed had the traits of a “destructive character.” He would stumble on this fact one day, perhaps by chance, and the heavier the shock dealt to him, the better his chances of representing the destructive character.
   </p>
@@ -131,7 +131,7 @@
     In order to put an end to the cretinizing influence of current street names, names of city councilors, heroes of the Resistance, all the Émiles and Édouards (55 Paris streets), all the Bugeauds and Gallifets,(2) and in general all obscene names (Rue de l’Évangile) should be obliterated.
   </p>
     <p>
-    In this regard, the appeal launched in<i>Potlatch #9</i>for ignoring the word “saint” in place names is more pertinent than ever.
+    In this regard, the appeal launched in <i>Potlatch #9</i> for ignoring the word “saint” in place names is more pertinent than ever.
   </p>
 </div>
 </body>
