--- a/favorites.htm
+++ b/favorites.htm
@@ -16,13 +16,37 @@
 </header>
 <body>
   <section class="content">
-    <section>
+<section>
+<h3>Ongoing engagements</h3>
+<ul>
+  <li><i>Intro to Coding for Designers</i> w/ Megumi Tanaka, <a href="https://index-space.org/">Index</a> (NYC)</li>
+  <li><i>Punctual Momentum | On the dot, down the line</i> w/ Adam Feldmeth, <a href="http://southland.institute/index.html">The Southland Institute</a> (LA)</li>
+  <li>Community Reading Group, <a href="https://www.lacarchive.com/">Los Angeles Contemporary Archive</a> (LA)</li>
+</ul>
+<h3>Some recent reading</h3>
+<ul>
+<li>Walter Benjamin, <i>The Storyteller: Reflections on the Works of Nikolai Leskov</i> (1936)</li>
+<li><i>Prescriptions for Comedy Writers: A Conversation between Wilhelm Speyer and Walter Benjamin</i> (1930)</li>
+<li>Walter Benjamin, <i>Conversation on Love</i> (c. 1911)</li>
+<li>Walter Benjamin, <i>The Free School Community</i> (1911)</li>
+<li>Murray Bookchin, <i>The Unity of Ideals and Practice</i> (1997)</li></ul>
+<h3>Current long-term reading</h3>
+ <ul>
+   <li>Fred Moten, <i>Black and Blur</i> (2017)</li>
+   <li>Michael Löwy, <i>Redemption and Utopia: Jewish Libertarian Thought in Central Europe</i> (1988)</li>
+ </ul>
+</section>
+<section>
 <p>A short selection of good projects and organizations, some of which I've worked or studied with.</p>
-  <ul>
-    <li><a href="http://communityreadinggroup.com/">Community Reading Group</a></li>
-    <li><a href="http://southland.institute/">The Southland Institute (for critical, durational, and typographic post-studio practices)</a></li>
-    <li><a href="https://www.lacarchive.com/">Los Angeles Contemporary Archive</a></li>
-    <li><a href="https://cyberfeminismindex.com/">Cyberfeminism Index</a></li>
-    <li><a href="http://universityoftheunderground.org/">University of the Underground</a></li>
-    <li><a href="https://tinytools.directory/">Open source, experimental, and tiny tools roundup</a></li>
-    <li><a href="https://theanarchistlibrary.org/special/index">The Anarchist Library</a></li>
+<ul>
+<li><a href="http://communityreadinggroup.com/">Community Reading Group</a></li>
+<li><a href="http://southland.institute/">The Southland Institute (for critical, durational, and typographic post-studio practices)</a></li>
+<li><a href="https://www.lacarchive.com/">Los Angeles Contemporary Archive</a></li>
+<li><a href="https://cyberfeminismindex.com/">Cyberfeminism Index</a></li>
+<li><a href="http://universityoftheunderground.org/">University of the Underground</a></li>
+<li><a href="https://tinytools.directory/">Open source, experimental, and tiny tools roundup</a></li>
+<li><a href="https://theanarchistlibrary.org/special/index">The Anarchist Library</a></li>
+</ul>
+</section>
+</section>
+</body>
