--- a/destruction.htm
+++ b/destruction.htm
@@ -2,7 +2,7 @@
 <html lang="en">
 <!-- This website is a test and not necessarily permanent -->
 <head>
-<title>Layout test</title>
+<title>Destruction</title>
 <link rel="icon" type="image/png" href="images/favicon.png">
 <link rel="stylesheet" type="text/css" href="talmud.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
