--- a/favorites.htm
+++ b/favorites.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Zach's favorites</title>
+<title>Favorites</title>
 <link rel="icon" type="image/png" href="images/favicon.png">
 <link rel="stylesheet" type="text/css" href="style.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
