Added footnote to Destruction, added Focus function for links

--- a/destruction.htm
+++ b/destruction.htm
@@ -134,4 +134,9 @@
     In this regard, the appeal launched in <i>Potlatch #9</i> for ignoring the word “saint” in place names is more pertinent than ever.
   </p>
 </div>
+<br>
+<p class="titlecenter">
+  <em>This page (desktop view) was inspired by the <a href="https://en.wikipedia.org/wiki/Talmud#Babylonian_Talmud">Babylonian Talmud</a></em>
+</p>
+<br>
 </body>
