Wrote more text for index

--- a/index.htm
+++ b/index.htm
@@ -45,3 +45,13 @@
         As an alternative, I started to keep quotes from others who refer to me in conversations. It's less of who I believe myself to be—in theory, it's closer to how I will be remembered when I'm no longer around.</i>
       </p>
     </section>
+    <section>
+    <p>
+      This site is a testing ground for publishing text on the World Wide Web, specifically concerned with layout suited for commentary and the positioning of multiple ideas. It is a repository for old thoughts and thoughts on those thoughts.
+    </p>
+  </section>
+  <section>
+    <p>
+      <i>I've been considering how the Web can be used for commentary, criticism, and annotation. Some things that have been on my mind lately are Ted Nelson's vision of two-way hyperlinks; Octavia Butler reading several books at once in rotation; a workshop called <a href="http://multidimensional.link/about.html">more*</a> designed by Mindy Seu & Laura Coombs; the function of margins in the Babylonian Talmud; Walter Benjamin's incomplete study of Parisian arcades; and Bob Arellano's early hypertext novel, <a href="http://sunshine69.com/noflash.html">Sunshine'69</a>.
+      </i>
+    </p>
