New public website
Major update for publishing on the web with domain name, replacing my old Format website. All pages removed other than the index. Talmud CSS has been removed. A copy of the website pre-update was archived on my computer for future reference.

--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- This website is a test and not necessarily permanent -->
+<!-- This website is a work-in-progress -->
 <head>
 <title>Zach Whitworth</title>
 <link rel="icon" type="image/png" href="images/favicon.png">
@@ -11,47 +11,40 @@
   <h1>Zach Whitworth</h1>
   <ol>
     <li class="menu"><i>Info</i></li>
-    <li class="menu"><a href=favorites.htm>Favorites</a></li>
-    <li class="menu"><a href="destruction.htm">Destruction</a></li>
   </ol>
 </header>
 <body>
-  <section class="content">
+  <section>
     <section>
     <p>
-      Zach Whitworth (Hebrew: זְכַרְיָה אֵיתָן; Irish: Sacharías Etan) hails from the Umpqua Valley of the Pacific Northwest.
+      <i>I’m from the Umpqua Valley of the Pacific Northwest. This is an in-progress space for sharing activities and updates. If you want to get in touch, send me an email (1025orchard [at] gmail [dot] com).</i>
     </p>
     <p>
-      “A gentleman and scholar.”
+      What I’ve been working on…
+      <br>
+I wrote an essay on speech for the upcoming issue of <a href="https://platesjournal.com/"><i>Plates Journal</i></a>, edited by <a href="https://caseycarsel.com/">Casey Carsel</a>. It’s representative of a major shift in my thinking on cosmic scales, possibly the most urgent piece I’ve written to date. COPY recently published <a href="https://readcopy.co/alternative-museum">my brief critique of alternative museums</a>, which I originally wrote at the beginning of the year. My old textwork “Messages to a Former Love” was printed in the new <a href="https://www.softqtrly.com/shop/p/summer21">Summer21 issue of <i>Soft</i></a>, which is available to purchase online and in select stores. I’m currently working on a case study of labor and utopia for the textile art journal <a href="https://feralfabric.com/"><i>Feral Fabric</i></a>. Other secret projects are also brewing. Aside from personal writing, I work with collections records at the <a href="https://www.lacarchive.com/">Los Angeles Contemporary Archive</a>.
     </p>
     <p>
-      “He brings people together.”
+      Some activities earlier this year…
+      <br>
+A rare fiction piece of mine was published in <a href="https://www.gritsquarterly.com/shop/p/issue-3-revival">the third issue of <i>Grits</i></a>, which is available to buy digitally. My contribution to the publication <a href="https://thirdroom.net/you-are-here"><i>You Are Here</i></a> was on display with Unbound Press at the <a href="https://www.ipcny.org/mapping-narratives">International Print Center New York</a>, selected by <a href="https://www.blackwomenofprint.com/">Black Women of Print</a>. I was featured at <a href="https://pmvabf.org/">Printed Matter’s Virtual Art Book Fair</a> with the <a href="http://southland.institute/">Southland Institute</a>, including a prompt I wrote for an earlier program on art museums, authoritarianism, and protest. A year after it was initially planned, I finished editing a group video piece about the minimum wage for the <a href="https://conceptualstudies.org/">Institute for Conceptual Studies</a> and included an original text on wage labor.
     </p>
     <p>
-      “A new friend who feels like an old friend.”
+      What I’m studying…
+      <br>
+I’m presently attending seminars in Philosophy, Art & Critical Thought at the <a href="https://egs.edu/">European Graduate School</a>. I’m reading Murray Bookchin’s <i>The Ecology of Freedom</i> with the <a href="http://communityreadinggroup.com/">Community Reading Group</a> (LA). <a href="http://www.feldmeth.net/index.html">Adam Feldmeth</a> and I are jointly theorizing on expressions and reactions, which may become something public in the future. On my own, I’ve been reading Michael Löwy’s <i>Redemption and Utopia</i> as well as Walter Benjamin’s <i>Moscow Diary</i>. I also set up my PlayStation for the first time in several years and am playing <i>Final Fantasy VII</i>.
     </p>
     <p>
-      “He is not only talented and intelligent but devoted to alternative methods of publishing discourse and collective organizing in the field.”
-    </p>
-    <p>
-      “He is a thoughtful and innovative scholar who has much to say about society. His ideas are urgent, pressing, and inciteful.”
+      An ongoing side project is the <a href="https://docs.google.com/spreadsheets/d/1lv2lLmVxdWMN-7xA23frEw5LYdaUXGkDy61EGnDmIDo/edit?usp=sharing">Authoritarian History Film Archive</a>, a spreadsheet of films dealing with the subject of authoritarianism and its opposition. Each film included is available to watch online for free. The <a href="https://conceptualstudies.org/">Institute for Conceptual Studies</a>, a platform I started in 2019, has been on extended hiatus for mental health reasons. I’m focusing on myself in the meantime, figuring things out. I have still been growing the Institute’s <a href="https://docs.google.com/document/d/1_QGakpZgte3ovLuggI6ryXtg7h05h8HppBKTH7_DFpc/edit?usp=sharing">"Links"</a> document, a directory of helpful websites for those in orbit of the arts.
     </p>
   </section>
     <section>
       <p>
-        <i>I've felt ambivalent about autobiographical statements for a while. I find myself oscillating between definitions and positions, never satisfied with one or the other. For instance, it's difficult for me to draw a line between my work as a writer and as an editor; as a designer and as a curator; as a scholar and as an art worker.
-      </p>
-      <p>
-        As an alternative, I started to keep quotes from others who refer to me in conversations. It's less of who I believe myself to be—in theory, it's closer to how I will be remembered when I'm no longer around.</i>
+        <i>Last updated August 31, 2021.
+          <br>
+          After paying for a website through Format for years, I finally learned to code one by hand through a class at <a href="https://index-space.org/">Index</a>. Many thanks to <a href="https://megumi.co/">Megumi Tanaka</a> for getting me started. I am currently paying $15 USD a year for my domain and host the code on <a href="https://github.com/zachwhitworth/zachwhitworth.github.io">GitHub</a> for free. My favicon is a portrait of me drawn by my former first-grade student, Taven.
+        </i>
       </p>
     </section>
-    <section>
-    <p>
-      This site is a testing ground for publishing text on the World Wide Web, specifically concerned with layout suited for commentary and the positioning of multiple ideas. It is a repository for old thoughts and thoughts on those thoughts.
-    </p>
   </section>
-  <section>
-    <p>
-      <i>I've been considering how the Web can be used for commentary, criticism, and annotation. Some things that have been on my mind lately are Ted Nelson's vision of two-way hyperlinks; Octavia Butler reading several books at once in rotation; a workshop called <a href="http://multidimensional.link/about.html">more*</a> designed by Mindy Seu & Laura Coombs; the function of margins in the Babylonian Talmud; Walter Benjamin's incomplete study of Parisian arcades; and Bob Arellano's early hypertext novel, <a href="http://sunshine69.com/noflash.html">Sunshine'69</a>.
-      </i>
-    </p>
+</body>
